--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write \"./src/**/*.{js,jsx}\" "
+    "format": "prettier --write \"./src/**/*.{js,jsx}\" ",
+    "lint": "eslint  \"./src/**/*.{js,jsx}\"",
+    "dev" : "parcel src/index.html"
+
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "parcel": "^1.12.3",
     "prettier": "^2.4.1"
   }
 }
