--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "format": "prettier --write \"./src/**/*.{js,jsx}\" ",
     "lint": "eslint  \"./src/**/*.{js,jsx}\"",
-    "dev" : "parcel src/index.html"
-
+    "dev": "parcel src/index.html"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +15,9 @@
     "eslint-config-prettier": "^8.3.0",
     "parcel": "^1.12.3",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
